# ice_engine

./: .gitignore  .travis.yml  BuildHelper.py  CMakeLists.txt  Hercules Design Document.odt  README.md  SConstruct  appveyor.yml  architecture.uxf  audio_architecture.uxf  build_and_run.py  conanfile.txt  ecs_architecture.uxf  event_architecture.uxf  game_architecture.dia  game_architecture.uxf  settings.ini  setup.py
benchmarks/: CMakeLists.txt
benchmarks/fixtures/: FixtureCallback.as
benchmarks/src/: ScriptingEngine.cpp
cmake/: AngelscriptConfig.cmake  BoostConfig.cmake  FreeImageConfig.cmake  GlewConfig.cmake  GlmConfig.cmake  SDL2Config.cmake
conan/angelscript/: conanfile.py
conan/celero/: conanfile.py
conan/ctpl/: conanfile.py
conan/entityx/: conanfile.py
conan/freeimage/: conanfile.py  conanfile.py.bkp
data/scripts/: Main.as  test.as
data/shaders/: basic.def.sc  basic.frag  basic.fs.sc  basic.vert  basic_with_color.vert  basic_with_texture.vert  terrain.frag  terrain.program  testing.frag  testing.vert
data/ui/: main.html
design/: Hercules Design Document.odt  IAudioEngine.hpp  IGameEngine.hpp  IGraphicsEngine.hpp  IPathfindingEngine.hpp  IPhysicsEngine.hpp  IResourceCache.hpp  IScene.hpp  IScriptingEngine.hpp  audio_architecture.dia  audio_architecture.dia~  audio_engine.puml  extra_architecture.dia  game_architecture.dia  game_engine_architecture.puml  graphics_architecture.dia  graphics_engine.puml  overall_architecture.dia  physics_architecture.dia  resource_management_architecture.dia  resource_management_architecture.dia~  resource_management_architecture.puml  scripting_architecture.dia  scripting_architecture.dia.autosave
design/gui/: IComponent.hpp  IGui.hpp
docs/: Doxyfile  Makefile  api.rst  conf.py  doxy-boot.js  generate.py  herculesdox  iceenginedox  index.rst  make.bat
docs/api/: full-api.rst  game-engine.rst  hercules.rst  index.rst  scripting-engine.rst
include/: Animate.hpp  Animation.hpp  AnimationHandle.hpp  Audio.hpp  AudioEngineBindingDelegate.hpp  AudioLoader.hpp  BindingDelegate.hpp  BindingDelegateUtilities.hpp  CPreProcessor.hpp  CPreProcessor.inl  Camera.hpp  Constants.hpp  DebugRenderer.hpp  DisplacementMap.hpp  EngineStatistics.hpp  EntityBindingDelegate.hpp  EntityComponentSystemEventListener.hpp  Game.hpp  GameEngine.hpp  GameFactory.hpp  GraphicsEngineBindingDelegate.hpp  HeightMap.hpp  Heightfield.hpp  HerculesMotionChangeListener.hpp  HerculesMotionStateListener.hpp  IAudioPlugin.hpp  IConnectEventListener.hpp  IDebugRenderer.hpp  IDisconnectEventListener.hpp  IFileSerializable.hpp  IGame.hpp  IGameEngine.hpp  IGraphicsPlugin.hpp  IGuiPlugin.hpp  IImage.hpp  IKeyboardEventListener.hpp  IMessageEventListener.hpp  IModule.hpp  IModuleFactory.hpp  IModulePlugin.hpp  (+62 more)
include/angel_script/: ClassFactory.hpp  TestAtom.hpp
include/as_wrapper/: ASRefObject.h  AScriptModule.h  AngelScript.h  AngelScript.hpp  AsObject.h
include/audio/: AudioEngineFactory.hpp  AudioFactory.hpp  AudioSceneHandle.hpp  IAudio.hpp  IAudioEngine.hpp  IAudioEngineFactory.hpp  ListenerHandle.hpp  SoundHandle.hpp  SoundSourceHandle.hpp
include/detail/: AssImpUtilities.hpp  Assert.hpp  DebugSerializer.hpp  Format.hpp  GenerateCube.hpp  GenerateVertices.hpp  Validation.hpp
include/ecs/: AnimationComponent.hpp  ChildrenComponent.hpp  DirtyComponent.hpp  Entity.hpp  EntityComponentSystem.hpp  GhostObjectComponent.hpp  GraphicsComponent.hpp  GraphicsSkyboxComponent.hpp  GraphicsTerrainComponent.hpp  OrientationComponent.hpp  ParentBoneAttachmentComponent.hpp  ParentComponent.hpp  PathfindingAgentComponent.hpp  PathfindingComponent.hpp  PathfindingCrowdComponent.hpp  PathfindingObstacleComponent.hpp  PersistableComponent.hpp  PhysicsComponent.hpp  PointLightComponent.hpp  PositionComponent.hpp  PositionOrientationComponent.hpp  PropertiesComponent.hpp  RigidBodyObjectComponent.hpp  ScriptObjectComponent.hpp  Serialization.hpp  SkeletonComponent.hpp
include/entities/: Entity.hpp  EntityComponentSystem.hpp  EntityFactory.hpp  GhostObjectComponent.hpp  GraphicsComponent.hpp  GraphicsComponentFactory.hpp  PathfindingComponent.hpp  PhysicsComponent.hpp  PointLightComponent.hpp  PositionOrientationComponent.hpp  ResourceHandle.hpp  RigidBodyObjectComponent.hpp
include/exceptions/: Exception.hpp  FileNotFoundException.hpp  InvalidArgumentException.hpp  InvalidOperationException.hpp  RuntimeException.hpp  Stacktrace.hpp  Throw.hpp
include/extras/: FpsCamera.hpp
include/fs/: File.hpp  FileSystem.hpp  IFile.hpp  IFileSystem.hpp
include/graphics/: AnimationHandle.hpp  BonesHandle.hpp  CameraHandle.hpp  CameraId.hpp  Color.hpp  Event.hpp  FragmentShaderHandle.hpp  GraphicsEngine.hpp  GraphicsEngineFactory.hpp  GraphicsFactory.hpp  IDisplacementMap.hpp  (+39 more)
scripts/: IMain.as  Main.as  manipulate_scene_nodes.as  test2.as  test_create_wolf.as
src/: Animate.cpp  Animation.cpp  Audio.cpp  AudioEngineBindingDelegate.cpp  BindingDelegate.cpp  CPreProcessor.cpp  Camera.cpp  Constants.cpp  EntityBindingDelegate.cpp  EntityComponentSystemEventListener.cpp  Game.cpp  GameEngine.cpp  GameFactory.cpp  GraphicsEngineBindingDelegate.cpp  HerculesMotionChangeListener.cpp  HerculesMotionStateListener.cpp  IceEngineMotionChangeListener.cpp  IceEnginePathfindingAgentMotionChangeListener.cpp  IceEnginePathfindingAgentStateChangeListener.cpp  IceEnginePathfindingMovementRequestStateChangeListener.cpp  Image.cpp  Main.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  NetworkingEngineBindingDelegate.cpp  OpenGlLoader.cpp  PathfindingEngineBindingDelegate.cpp  PathfindingTerrain.cpp  PhysicsEngineBindingDelegate.cpp  Player.cpp  PluginManager.cpp  ResourceCache.cpp  Scene.cpp  SceneBindingDelegate.cpp  ScriptFunctionHandleWrapper.cpp  ScriptingEngineBindingDelegate.cpp  Skeleton.cpp  Terrain.cpp  TerrainFactory.cpp  (+3 more)
tests/: CMakeLists.txt
tests/src/: CPreProcessor.cpp  FileSystem.cpp  Parameter.cpp  ScriptingEngine.cpp
tests/src/fs/: FileSystem.cpp
tests/src/scripting/: Parameter.cpp  ScriptingEngine.cpp
tests/src/scripting/angel_script/: AngelscriptCPreProcessor.cpp
(+306 files in other folders)
